// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the EPCIS Output Criteria nav properly 1`] = `
<div>
  <li
    className="arrow collapsed"
    onClick={[Function]}
    onContextMenu={[Function]}
  >
    <div
      className="tree-node-content tree-node-depth-undefined"
    >
      <a
        onClick={[Function]}
      >
        <span
          className="arrow-straight"
        >
          <span
            className="pt-icon-standard pt-icon-chevron-right"
            style={
              Object {
                "visibility": "hidden",
              }
            }
          />
        </span>
      </a>
      <a
        className="tree-node-epcis-output-criteria tree-node-link"
      >
        <span
          className="tree-node-label"
        >
          <span>
            plugins.output.EPCISOutputNav
          </span>
        </span>
      </a>
    </div>
    <ul
      style={
        Object {
          "display": "block",
          "margin": 0,
          "padding": 0,
          "width": "100%",
        }
      }
    />
  </li>
</div>
`;

exports[`renders the auth nav properly 1`] = `
<div>
  <li
    className="arrow collapsed"
    onClick={[Function]}
    onContextMenu={[Function]}
  >
    <div
      className="tree-node-content tree-node-depth-undefined"
    >
      <a
        onClick={[Function]}
      >
        <span
          className="arrow-straight"
        >
          <span
            className="pt-icon-standard pt-icon-chevron-right"
            style={
              Object {
                "visibility": "hidden",
              }
            }
          />
        </span>
      </a>
      <a
        className="tree-node-authentication tree-node-link"
      >
        <span
          className="tree-node-label"
        >
          <span>
            plugins.output.authenticationNav
          </span>
        </span>
      </a>
    </div>
    <ul
      style={
        Object {
          "display": "block",
          "margin": 0,
          "padding": 0,
          "width": "100%",
        }
      }
    />
  </li>
</div>
`;

exports[`renders the end points nav properly 1`] = `
<div>
  <li
    className="arrow collapsed"
    onClick={[Function]}
    onContextMenu={[Function]}
  >
    <div
      className="tree-node-content tree-node-depth-undefined"
    >
      <a
        onClick={[Function]}
      >
        <span
          className="arrow-straight"
        >
          <span
            className="pt-icon-standard pt-icon-chevron-right"
            style={
              Object {
                "visibility": "hidden",
              }
            }
          />
        </span>
      </a>
      <a
        className="tree-node-endpoints tree-node-link"
      >
        <span
          className="tree-node-label"
        >
          <span>
            plugins.output.endpointsNav
          </span>
        </span>
      </a>
    </div>
    <ul
      style={
        Object {
          "display": "block",
          "margin": 0,
          "padding": 0,
          "width": "100%",
        }
      }
    />
  </li>
</div>
`;

exports[`renders the top nav properly with output QU4RTET module disabled. 1`] = `
<div>
  <li
    className="arrow collapsed"
    onClick={[Function]}
    onContextMenu={[Function]}
  >
    <div
      className="tree-node-content tree-node-depth-undefined"
    >
      <a
        onClick={[Function]}
      >
        <span
          className="arrow-straight"
        >
          <span
            className="pt-icon-standard pt-icon-chevron-right"
            style={
              Object {
                "visibility": "hidden",
              }
            }
          />
        </span>
      </a>
      <a
        className="tree-node-undefined tree-node-link"
      >
        <span
          className="tree-node-label"
        >
          <i>
            <span>
              plugins.output.noOutputFound
            </span>
          </i>
        </span>
      </a>
    </div>
    <ul
      style={
        Object {
          "display": "block",
          "margin": 0,
          "padding": 0,
          "width": "100%",
        }
      }
    />
  </li>
</div>
`;

exports[`renders the top nav properly with output QU4RTET module enabled. 1`] = `
<div>
  <li
    className="arrow collapsed"
    onClick={[Function]}
    onContextMenu={[Function]}
  >
    <div
      className="tree-node-content tree-node-depth-undefined"
    >
      <a
        onClick={[Function]}
      >
        <span
          className="arrow-straight"
        >
          <span
            className="pt-icon-standard pt-icon-chevron-right"
            style={
              Object {
                "visibility": "visible",
              }
            }
          />
        </span>
      </a>
      <a
        className="tree-node-output tree-node-link"
      >
        <span
          className="tree-node-label"
        >
          <span>
            plugins.output.navItemsTitle
          </span>
        </span>
      </a>
    </div>
    <ul
      style={
        Object {
          "display": "block",
          "margin": 0,
          "padding": 0,
          "width": "100%",
        }
      }
    />
  </li>
</div>
`;
